--- a/style.css
+++ b/style.css
@@ -39,13 +39,20 @@ body{
 
 a{
     line-height: 0em;
+    text-decoration: none;
 }
 
 h1{
     font-size: 2rem;
 }
-p{
-    font-size: 1.5rem;
+
+p, li{
+    font-size: 1.25rem;
+    line-height: 1.25;
+}
+
+li{
+    margin: 8px 0px 8px 0px;
 }
 nav{
     display: flex;
@@ -88,14 +95,14 @@ nav:hover{
     transition: background-color 0.3s ease;
 }
 
-.nav-items > div{
+.nav-items > div, .nav-items > a{
     display: flex;  
     justify-content: center;
     align-items: center;
     padding: 8px;
 
     border-radius: var(--max-radius);
-    transition: background-color 0.3s ease;
+    transition: transform 0.5s ease background-color 0.3s ease;
 }
 
 .links{
@@ -106,7 +113,7 @@ nav:hover{
     background-color: var(--black-hover);
 }
 
-.links > div:hover{
+.links > a:hover{
     background-color: var(--accent);
     transform: scale(1.05);    
 }
@@ -121,13 +128,12 @@ nav:hover{
     gap: 8px;
     flex-wrap: wrap;
     margin: 0px 0px 32px 0px;
-
 }
 
 .card{
     display: flex;
     padding: 8px;
-    min-width: 35dvw;
+    min-width: 43dvw;
     max-width: 90dvw;
     /* max-height: 60dvh; */
     justify-content: space-evenly;
@@ -145,7 +151,7 @@ nav:hover{
 .feat-photo{
     min-width: 300px;
     width: 60dvw;
-    height: 70dvh;
+    /* height: 70dvh; */
     max-width: 90dvw;    
     object-fit: cover;
 
@@ -158,8 +164,13 @@ nav:hover{
 }
 
 .card > .card{
+    min-width: 30dvw;
     min-height: fit-content;
     border-radius: 8px;
     background: var(--white-transparent);
+}
+
+.card-title{
+    margin: 0px 0px 8px 0px;
 }
 
